--- a/index.Rmd
+++ b/index.Rmd
@@ -4,8 +4,9 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, message = FALSE)
 library(knitr)
+library(tidyverse)
 source("chart1.R")
 source("chart2.R")
 ```
