--- a/index.Rmd
+++ b/index.Rmd
@@ -27,10 +27,10 @@ most cases and deaths in the entire world. The state with the most deaths is
 `r state_with_the_most_deaths`. Coincidentally, the state that experienced the 
 most Black deaths is also `r state_with_the_most_black_deaths`. In the US, minority 
 communities experienced highest rates of death. On a daily average, the minority 
-community experiences `r minority_average_death_count` deaths. The black community 
+community experiences `r minority_average_death_count` deaths. The Black community 
 have especially been impacted by the pandemic. Their community experiences a average daily 
 death count of `r african_average_death_count`. Minority groups make up
-`r percentage_of_minority_deaths`% of deaths in the US, with the black community making up
+`r percentage_of_minority_deaths`% of deaths in the US, with the Black community making up
 `r percentage_of_black_deaths`% of the minority death population. In general, minority groups
 have been the most vulnerable during the pandemic, being more exposed to the virus and experience 
 deaths at higher rates than white communities.
