--- a/index.Rmd
+++ b/index.Rmd
@@ -5,12 +5,8 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, message = FALSE)
+knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
-library(tidyverse)
-source("chart1.R")
-source("chart2.R")
-source("chart3.R")
 ```
 
 ## Introduction
@@ -29,7 +25,7 @@ information function [ JONATHAN ]
 
 ## Table 
 
-```{r, include=FALSE}
+```{r setup, include=FALSE}
 kable(job_gains_or_loss_by_race)
 ```
 
@@ -44,8 +40,17 @@ pandemic, with the race with the highest impact is White, but proportionally
 to their populations, Hispanic and African-Americans are more impacted by the
 loss of unemployment during the pandemic.
 
+# White with covid out of total white pop
+white_covid_ratio <- 33,146,501 / 234,370,202 # 14% of white pop lost jobs
 
-```{r, include=FALSE}
+# African-Americans with covid out of total Africa-American pop
+Black_covid_ratio <- 9,971,075 / 44,100,000 # 22.6% of black pop lost jobs
+
+# Hispanics with covid out of total Hispanics pop
+Hispanics_covid_ratio <- 12,195,967 / 60,600,000 # 20 of hispanic pop lost job
+
+
+```{r setup, include=FALSE}
 kable(cumulative_cases_by_race)
 ```
 
@@ -59,7 +64,7 @@ positive than Whites until October 14, where Whites and Unknown races
 test more positive than Hispanics and Blacks.
 
 
-```{r, include=FALSE}
+```{r setup, include=FALSE}
 kable(rate_increase_in_cases_by_race)
 ```
 
@@ -74,28 +79,19 @@ increase of new covid cases over time during the pandemic.
 
 
 ## Chart 1
-
-```{r, echo=FALSE}
-unemployment_by_race
-```
-
-This chart was intended to show the relationship between race and percentage unemployed. Based on the observed data, unemployment percentages are relatively similar between races, however, white unemployment rate appear higher than African-American, Hispanic, and other races.
+Describe the purpose of each chart (e.g., "this chart was intended to show the 
+relationship between..."), render each chart, and describe pertinent 
+observations found in each chart
 
 
 ## Chart 2
-```{r, echo=FALSE}
-employment_by_month
-```
-
-This chart was intended to show the trends of employed individuals across a year by month. The observed data shows a significant dip during months march thru may, slowly rising in numbers going into fall season. 
+Describe the purpose of each chart (e.g., "this chart was intended to show the 
+relationship between..."), render each chart, and describe pertinent 
+observations found in each chart
 
 
 ## Chart 3
-```{r, echo=FALSE}
-employment_range
-```
-
-
-This chart was intended to show the fluctuation of employment on EA-17 and G-7 between November 2019 and January 2021. The observed data shows that, compared to the US other countries such as Japan and Korea did not fluctuate in terms of employment in the given time period, whereas countries such as Canada, Chile, and Columbia went through more fluctuations of employment in the given time period. 
-
+Describe the purpose of each chart (e.g., "this chart was intended to show the 
+relationship between..."), render each chart, and describe pertinent 
+observations found in each chart
 
