Updated index file again

--- a/index.Rmd
+++ b/index.Rmd
@@ -99,17 +99,27 @@ increase of new covid cases over time during the pandemic.
 ```{r echo = F}
 unemployment_by_race
 ```
-This chart was intended to show the relationship between race and percentage unemployed. Based on the observed data, unemployment percentages are relatively similar between races, however, white unemployment rate appear higher than African-American, Hispanic, and other races.
+This chart was intended to show the relationship between race and percentage
+unemployed. Based on the observed data, unemployment percentages are relatively
+similar between races, however, white unemployment rate appear higher than
+African-American, Hispanic, and other races.
 
 
 ## Chart 2
 ```{r echo = F}
 employment_by_month
 ```
-This chart was intended to show the trends of employed individuals across a year by month. The observed data shows a significant dip during months march thru may, slowly rising in numbers going into fall season.
+This chart was intended to show the trends of employed individuals across a
+year by month. The observed data shows a significant dip during months march
+through may, slowly rising in numbers going into fall season.
 
 ## Chart 3
 ```{r, echo = F}
 employment_range
 ```
-Ths chart was intended to show the relationship between fluctuation of employment between EA-19 and G-7 between Nov 2019 to January 2021. The observed data shows that while countries like Japan (JPN), Korea (KOR), and Russia (RUS) did not go through much fluctuations of employment in the given timer period, countries such as Canada (CAN), Chile (CHL), Columbia (COL), and USA went through mroe employment rate fluctuations.
+Ths chart was intended to show the relationship between fluctuation of
+employment between EA-19 and G-7 between Nov 2019 to January 2021.
+The observed data shows that while countries like Japan (JPN), Korea (KOR),
+and Russia (RUS) did not go through much fluctuations of employment in the
+given timer period, countries such as Canada (CAN), Chile (CHL), Columbia (COL),
+ and USA went through mroe employment rate fluctuations.
