summary is good to go

--- a/index.Rmd
+++ b/index.Rmd
@@ -44,6 +44,7 @@ deaths at higher rates than white communities.
 ## Table
 
 ```{r echo = F}
+library(knitr)
 kable(job_gains_or_loss_by_race)
 ```
 
