--- a/index.Rmd
+++ b/index.Rmd
@@ -62,23 +62,20 @@ loss of unemployment during the pandemic.
 
 ## White with COVID outside of total white population 
 
-```{r echo=F}
+```{r echo=F, comment="", prompt= TRUE}
 white_covid_ratio
 ```
 
-
-
 ## African-Americans with COVID out of the total African American population 
 
-```{r echo = F}
+```{r echo = F, comment="", prompt = FALSE}
 Black_covid_ratio 
 ```
 
 
-
 ## Hispanics with COVID out of the total Hispanics population 
 
-```{r echo=F}
+```{r echo=F, comment = "", prompt = FALSE}
 Hispanics_covid_ratio
 ```
 
@@ -135,7 +132,7 @@ through may, slowly rising in numbers going into fall season.
 
 
 ## Chart 3
-```{r, echo = F}
+```{r, echo = F, warning=FALSE}
 employment_range
 ```
 
