--- a/index.Rmd
+++ b/index.Rmd
@@ -69,19 +69,19 @@ white_covid_ratio
 ## African-Americans with COVID out of the total African American population 
 
 ```{r echo = F, comment="", prompt = FALSE}
-Black_covid_ratio 
+Black_covid_ratio <- 9971075 / 44100000 # 22.6% of black pop lost jobs
 ```
 
 
 ## Hispanics with COVID out of the total Hispanics population 
 
 ```{r echo=F, comment = "", prompt = FALSE}
-Hispanics_covid_ratio
+Hispanics_covid_ratio <- 12195967 / 60600000 # 20 of hispanic pop lost jobs
 ```
 
 
 ```{r echo = F}
-kable(cumulative_cases_by_race)
+kable(cumulative_cases_by_race) <- 33146501 / 234370202 # 14% of white pop lost jobs
 ```
 
 For the Covid By Race data, decided to calculate the total cases of covid
