--- a/index.Rmd
+++ b/index.Rmd
@@ -68,21 +68,21 @@ white_covid_ratio
 ## African-Americans with COVID out of the total African American population 
 
 ```{r echo = F, comment="", prompt = FALSE}
-Black_covid_ratio <- 9971075 / 44100000 # 22.6% of black pop lost jobs
+Black_covid_ratio 
 ```
 
 
 ## Hispanics with COVID out of the total Hispanics population 
 
 ```{r echo = F, comment = "", prompt = FALSE}
-Hispanics_covid_ratio <- 12195967 / 60600000 # 20 of hispanic pop lost jobs
+Hispanics_covid_ratio 
 
 ```
 
 
 ## Aggregate Table Script: Cumulative Cases by Race 
 ```{r echo = F}
-kable(cumulative_cases_by_race) <- 33146501 / 234370202 # 14% of white pop lost jobs
+kable(cumulative_cases_by_race)
 ```
 
 
